@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -16,7 +17,7 @@
     <properties>
         <!-- https://mvnrepository.com/artifact/io.quarkus/quarkus-universe-bom -->
         <!-- https://mvnrepository.com/artifact/io.quarkus/quarkus-maven-plugin -->
-        <quarkus.version>1.8.3.Final</quarkus.version>
+        <quarkus.version>1.9.1.Final</quarkus.version>
     </properties>
 
     <dependencyManagement>
@@ -43,9 +44,9 @@
                         <source>${java.version}</source>
                         <target>${java.version}</target>
                         <compilerArgs>
-                            <arg>--enable-preview</arg>
+                            <!-- <arg>&#45;&#45;enable-preview</arg> -->
                         </compilerArgs>
-                        <jvmArgs>--enable-preview</jvmArgs>
+                        <!-- <jvmArgs>&#45;&#45;enable-preview</jvmArgs> -->
                     </configuration>
                     <executions>
                         <execution>
